No longer overflowing on mobile

--- a/frontend/content/assets/css/program.css
+++ b/frontend/content/assets/css/program.css
@@ -1,3 +1,7 @@
+.javazone-program {
+    overflow: hidden;
+}
+
 .javazone-program .sub-section .section-header {
     float: none;
     text-align: left;
